--- a/contact/index.html
+++ b/contact/index.html
@@ -23,8 +23,9 @@ title: contact
         <a href="https://twitter.com/ThermalSpan">
             <img src="{{site.url}}/images/twittericon.png" alt="twitter icon">
         </a>
+    </li>
 </ul>
-<form id="braceform" method-"POST" action="http://forms.brace.io/russell.bentley@Uconn.edu">
+<form id="braceform" method="POST" action="http://forms.brace.io/russell.bentley@Uconn.edu">
     <div class="form-group">
         <label for="exampleInputName">Name</label>
         <input name="name" type="name" class="form-control" id="exampleInputName" placeholder="Enter name">
@@ -35,21 +36,7 @@ title: contact
     </div>
     <div class="form-group">
         <label for="exampleTextArea">Message</label>
-        <textarea name="message" class="form-control" rows="3"></textarea>  
+        <textarea name="message" class="form-control" rows="5"></textarea>  
     </div>
     <button type="submit" value="Send">Submit</button>
 </form>
-<ul class="icon-list">
-    <li>
-        <a href="http://forms.brace.io">
-          <h3>Powered by Brace Forms</h3>
-          <img src="{{site.url}}/images/braceformslogo.png" alt="Brace Forms Logo">
-        </a>
-    </li>
-    <li>
-        <a href="https://www.behance.net/gallery/Bright-Social-Icons/15687597">
-            <h3>Icons from IconFinder</h3>
-            <img src="{{site.url}}/imageslogo.png" alt="Brace Forms Logo">
-        </a>
-    </li>
-</ul>
